--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "bootstrap": "^5.2.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
-    "sass": "^1.59.3"
+    "react-select": "^5.7.4",
+    "sass": "^1.59.3",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "20.4.10",
