--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-responsive-modal": "^6.4.2",
     "react-select": "^5.7.4",
     "sass": "^1.59.3",
     "swiper": "^10.1.0"
